--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center; */
+  height: 100vh;
+  background-color: dimgray;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-item {
+  background-color: rgb(167, 161, 148);
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 10px;
 }
